// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SVG Icons <SvgCircleLeft /> renders correctly 1`] = `
<Svg
  height={20}
  preserveAspectRatio="xMidYMid meet"
  viewBox="0 0 32 32"
  width={20}
>
  <Path
    d="M16 32c8.837 0 16-7.163 16-16S24.837 0 16 0 0 7.163 0 16s7.163 16 16 16zm0-29c7.18 0 13 5.82 13 13s-5.82 13-13 13S3 23.18 3 16 8.82 3 16 3z"
    fill="#d0ccd0"
  />
  <Path
    d="M20.914 9.914l-2.829-2.829-8.914 8.914 8.914 8.914 2.828-2.828-6.086-6.086z"
    fill="#d0ccd0"
  />
</Svg>
`;

exports[`SVG Icons <SvgCog /> renders correctly 1`] = `
<Svg
  height={20}
  preserveAspectRatio="xMidYMid meet"
  viewBox="0 0 32 32"
  width={20}
>
  <Path
    d="M29.181 19.07c-1.679-2.908-.669-6.634 2.255-8.328l-3.145-5.447a6.022 6.022 0 0 1-3.058.829c-3.361 0-6.085-2.742-6.085-6.125h-6.289a6.023 6.023 0 0 1-.811 3.07C10.369 5.977 6.637 6.966 3.709 5.28L.565 10.727a6.023 6.023 0 0 1 2.246 2.234c1.676 2.903.672 6.623-2.241 8.319l3.145 5.447a6.022 6.022 0 0 1 3.044-.82c3.35 0 6.067 2.725 6.084 6.092h6.289a6.032 6.032 0 0 1 .811-3.038c1.676-2.903 5.399-3.894 8.325-2.219l3.145-5.447a6.032 6.032 0 0 1-2.232-2.226zM16 22.479A6.48 6.48 0 1 1 16 9.52a6.48 6.48 0 0 1 0 12.959z"
    fill="#d0ccd0"
  />
</Svg>
`;

exports[`SVG Icons <SvgHome /> renders correctly 1`] = `
<Svg
  height={20}
  preserveAspectRatio="xMidYMid meet"
  viewBox="0 0 32 32"
  width={20}
>
  <Path
    d="M32 18.451L16 6.031 0 18.451v-5.064L16 .967l16 12.42zM28 18v12h-8v-8h-8v8H4V18l12-9z"
    fill="#d0ccd0"
  />
</Svg>
`;

exports[`SVG Icons <SvgPages /> renders correctly 1`] = `
<Svg
  height={20}
  preserveAspectRatio="xMidYMid meet"
  viewBox="0 0 32 32"
  width={20}
>
  <Path
    d="M20 8V0H6L0 6v18h12v8h20V8H20zM6 2.828V6H2.828L6 2.828zM2 22V8h6V2h10v6l-6 6v8H2zm16-11.172V14h-3.172L18 10.828zM30 30H14V16h6v-6h10v20z"
    fill="#d0ccd0"
  />
</Svg>
`;

exports[`SVG Icons <SvgStats /> renders correctly 1`] = `
<Svg
  height={20}
  preserveAspectRatio="xMidYMid meet"
  viewBox="0 0 32 32"
  width={20}
>
  <Path
    d="M0 26h32v4H0zm4-8h4v6H4zm6-8h4v14h-4zm6 6h4v8h-4zm6-12h4v20h-4z"
    fill="#d0ccd0"
  />
</Svg>
`;
